tests/baselines/reference/jsFileCompilationTypeSyntaxOfVar.errors.txt
error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
tests/cases/compiler/a.js(1,8): error TS8010: 'types' can only be used in a .ts file.


!!! error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
==== tests/cases/compiler/a.js (1 errors) ====
    var v: () => number;
           ~~~~~~~~~~~~
!!! error TS8010: 'types' can only be used in a .ts file.